--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 body {
-  font-family: "Open Sans", "Segoe UI", Candara, "DejaVu Sans",
+  font-family: "Roboto", "Open Sans", "Segoe UI", Candara, "DejaVu Sans",
     "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif !important;
   word-spacing: 0.033rem;
   letter-spacing: 0.034rem;
