--- a/src/globals.scss
+++ b/src/globals.scss
@@ -1,6 +1,18 @@
 $color-primary: #1e2;
 
-
 .green-01 {
-    color: $color-primary;
+  color: $color-primary;
+}
+
+@keyframes blockuiRotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
+.blockuiSpinner {
+  animation: blockuiRotation 1.44s infinite;
 }
