--- a/src/globals.scss
+++ b/src/globals.scss
@@ -4,6 +4,20 @@ $color-primary: #1e2;
   color: $color-primary;
 }
 
+// https://codepen.io/devstreak/pen/dMYgeO
+.scrollbar-thin::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.scrollbar-thin::-webkit-scrollbar {
+  width: 0.2rem;
+  background: transparent;
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb {
+  background-color: #334155;
+}
+
 @keyframes blockuiRotation {
   from {
     transform: rotate(0deg);
