--- a/styles/build.css
+++ b/styles/build.css
@@ -1067,6 +1067,10 @@ select {
   overflow: hidden;
 }
 
+.\!overflow-hidden {
+  overflow: hidden !important;
+}
+
 .overflow-y-auto {
   overflow-y: auto;
 }
