--- a/styles/build.css
+++ b/styles/build.css
@@ -870,6 +870,14 @@ select {
   bottom: 1rem;
 }
 
+.right-24 {
+  right: 6rem;
+}
+
+.right-12 {
+  right: 3rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -956,6 +964,10 @@ select {
 
 .w-32 {
   width: 8rem;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .-translate-x-1\/2 {
@@ -1071,6 +1083,16 @@ select {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-slate-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
+.bg-slate-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
