--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -2,35 +2,50 @@
  * This injects Tailwind's base styles and any base styles registered by
  * plugins.
  */
- @tailwind base;
+@tailwind base;
 
- /**
+/**
    * This injects Tailwind's component classes and any component classes
    * registered by plugins.
    */
- @tailwind components;
- 
- /**
+@tailwind components;
+
+/**
    * This injects Tailwind's utility classes and any utility classes registered
    * by plugins.
    */
- @tailwind utilities;
- 
- /**
+@tailwind utilities;
+
+/**
    * Use this directive to control where Tailwind injects the hover, focus,
    * responsive, dark mode, and other variants of each class.
    *
    * If omitted, Tailwind will append these classes to the very end of
    * your stylesheet by default.
    */
- @tailwind variants;
- 
+@tailwind variants;
 
- 
- /* 
- @layer components {
-  .class-custom {
-    @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+@layer components {
+  .link {
+    @apply cursor-pointer text-indigo-700 hover:underline active:text-red-600;
+  }
+  .link-preview {
+    @apply cursor-zoom-in text-indigo-700 decoration-dashed hover:underline;
+  }
+  /* default button; dark grey; small padding; white text; rounded */
+  .button {
+    @apply rounded-full p-2 px-4 outline-none border-none bg-slate-500 text-white uppercase hover:bg-slate-900 active:bg-black transition-colors cursor-pointer;
+  }
+  .button-primary {
+    @apply button bg-slate-800;
+  }
+  .icon-close {
+    @apply absolute z-[1] top-4 right-4 text-4xl opacity-40 hover:scale-110 hover:opacity-80 cursor-pointer;
+  }
+  .input-underline {
+    @apply w-full px-0.5 border-0 border-b-2 border-gray-50 focus:ring-0 focus:border-gray-200 placeholder:italic placeholder:opacity-40 !bg-transparent;
+  }
+  .input-styled {
+    @apply block w-full rounded-md border-gray-300 focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50;
   }
 }
-*/
