UI matrial mui (#14)
* responsive modal

* #2 responsive modal

* +component <DarkModeToggle>

* @icons <DarkModeToggle>

* +provider .useWindowDocument

* +component <Drag>

Co-authored-by: nikolav <admin@nikolav.rs>

--- a/styles/build.css
+++ b/styles/build.css
@@ -937,6 +937,10 @@ select {
   bottom: 1rem;
 }
 
+.left-4 {
+  left: 1rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -1162,6 +1166,21 @@ select {
   background-color: rgb(100 116 139 / 0.5);
 }
 
+.bg-blue-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
+}
+
+.bg-red-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -1384,6 +1403,11 @@ select {
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
 
+.dark .dark\:text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
+}
+
 .dark .dark\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1500,7 +1524,7 @@ select {
   .lg\:w-1\/2 {
     width: 50%;
   }
-}
+
 
 @media (min-height: 792px) {
   .tall\:inset-y-32 {
